# agentblackbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
agentblackbox/: __init__.py  __main__.py  cli.py  cost.py  masking.py  models.py  recorder.py  remote.py  sharing.py  storage.py
agentblackbox/dashboard/: app.py
agentblackbox/dashboard/templates/: analytics.html  base.html  session_detail.html  sessions.html
agentblackbox/dashboard/templates/partials/: sessions_rows.html
agentblackbox/integrations/: __init__.py  anthropic_sdk.py  langchain.py  langchain_cb.py  openai_agents.py
docs/launch-prep/: task1-sns-content.md  task2-user-interview.md  task3-cloud-architecture.md  task4-company-materials.md
examples/: basic_usage.py
site/: index.html  view.html
tests/: test_cli.py  test_core.py  test_integrations.py  test_masking.py  test_sharing.py
