[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentblackbox"
version = "0.2.0"
description = "A flight recorder for AI agents – record every decision, tool call, and failure"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Takumu Hata"}]
requires-python = ">=3.10"
keywords = ["ai", "agents", "llm", "observability", "monitoring", "debugging", "openai", "anthropic", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dashboard = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1"]
dev = ["pytest>=8", "pytest-cov>=5", "hatch"]

[project.scripts]
agentblackbox = "agentblackbox.cli:main"

[project.urls]
Homepage   = "https://github.com/takumukata/agentblackbox"
Repository = "https://github.com/takumukata/agentblackbox"
Issues     = "https://github.com/takumukata/agentblackbox/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentblackbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short"

[tool.coverage.run]
source = ["agentblackbox"]
omit   = ["agentblackbox/dashboard/*", "agentblackbox/integrations/*"]

[tool.coverage.report]
show_missing = true
fail_under   = 60
